# Rapyd

./: Cargo.toml  readme.md  rust-toolchain.toml
examples/: Cargo.toml
examples/aotp/: Cargo.toml  index.html
examples/aotp/src/: component.rs  main.rs  state.rs
rapyd/: Cargo.toml
rapyd-fine-grained-compilation-output/: Cargo.toml
rapyd-fine-grained-compilation-output/src/: app.rs  counter.rs  lib.rs  scope.rs  state_h.rs
rapyd-macros/: Cargo.toml
rapyd-macros-new/: Cargo.toml
rapyd-macros-new/src/: lib.rs  util.rs
rapyd-macros/src/: lib.rs  scope_field_attrs.rs  scope_struct.rs
rapyd-playground/: Cargo.toml  hello_world_kj.html
rapyd-playground/src/: app.rs  component.rs  counter.rs  hello_world_kj.rs  lib.rs  main.rs
rapyd-web-playground/: Cargo.toml  LICENSE_MIT
rapyd-web-playground/src/: lib.rs
rapyd/src/: component.rs  lib.rs  state.rs
rapyd/src/state/: closure.rs  mod.rs
rapyd/src/util/: mod.rs
struct-based-template/: Cargo.toml
struct-based-template/src/: lib.rs  old.rs  util.rs
util-macros/: Cargo.toml
util-macros/src/: lib.rs
web-browser-playground/: index.html  index.js  package-lock.json  package.json
