[package]
name = "rapyd-fine-grained-compilation-output"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = [
    "Element",
    "Text",
    "DocumentFragment",
    "Document",
    "Window",
    "Range",
    "console"
] }
const_format = "0.2.26"
arrayvec = "0.7.2"
array-concat = "0.5.1"
rapyd-macros = { version = "0.1.0", path = "../rapyd-macros" }
