[package]
name = "rapyd-macros-new"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn-rsx = "0.8.1"
syn = { version = "1.0.98", features = ["full"] }
quote = "1.0.20"
proc-macro2 = "1.0.40"
const_format = "0.2.26"
convert_case = "0.5.0"
rapyd = { version = "0.1.0", path = "../rapyd" }
fancy-regex = "0.10.0"
# handlebars = "4.3.2"
