[package]
name = "rapyd-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
no-panic = "0.1.16"
once_cell = "1.15.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.102", features = [
    "full",
    "extra-traits",
    "fold",
    "visit",
    "visit-mut",
] }
# syn-rsx = "0.8.1"
syn-rsx = { git = "https://github.com/stoically/syn-rsx", branch = "node-enum" }
