[package]
name = "rapyd-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
no-panic = "0.1.16"
proc-macro2 = { version = "1.0.47" } #, features = ["span-locations"] }
once_cell = "1.15.0"
proc-macro-error = "1.0.4"
syn = { version = "1.0.102", features = [
    "full",
    "extra-traits",
    "fold",
    "visit",
    "visit-mut",
] }
# syn-rsx = "0.8.1"
syn-rsx = { git = "https://github.com/stoically/syn-rsx", branch = "node-enum" }
