[package]
name = "rapyd-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapyd-macros = { path = "../rapyd-macros", version = "0.1.0" }
syn-rsx = "0.8.1"
syn = { version = "1.0.98", features = ["full"] }
proc-macro2 = "1.0.40"
web-sys = { version = "0.3.59", features = [
    "Text",
    "DocumentFragment",
    "Document",
    "Window",
    "Range",
] }
const_format = "0.2.26"
rkyv = { version = "0.7.39", features = [
    "validation",
    "indexmap",
    "tinyvec",
    "tinyvec_alloc",
    "uuid",
    "uuid_std",
    "smallvec",
] }
bytecheck = { version = "0.6.9", features = ["uuid"] }
wasm-bindgen = "0.2.82"
rapyd = { version = "0.1.0", path = "../rapyd" }
enclose = "1.1.8"
