[package]
name = "rapyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.0"
gloo = "0.8.0"
gloo-utils = "0.1.6"
js-sys = "0.3.60"
slotmap = "1.0.6"
type-map = "0.5.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    "Text",
    "HtmlTemplateElement",
    "HtmlBodyElement",
    "Comment",
    "CharacterData",
    "DocumentFragment",
    "EventTarget",
] }
