[package]
name = "struct-based-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-concat = "0.5.1"
enclose = "1.1.8"
num-traits = "0.2.15"
rapyd = { version = "0.1.0", path = "../rapyd" }
rapyd-macros = { version = "0.1.0", path = "../rapyd-macros" }
regex = "1.6.0"
web-sys = { version = "0.3.59", features = ["Text", "EventTarget", "HtmlElement", "Element", "Node", "console"] }
