[package]
name = "util-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = { version = "1.0.47" }
proc-macro-error = "1.0.4"
syn = { version = "1.0.102", features = [
    "full",
    "extra-traits",
    "fold",
    "visit",
    "visit-mut",
] }
