[package]
name = "aotp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-str = "0.5.3"
rapyd = { path = "../../rapyd" }
rapyd-macros = { path = "../../rapyd-macros" }
seq-macro = "0.3.2"
syn = { version = "1.0.102" }
web-sys = { version = "0.3.60", features = ["Text"] }
