[package]
name = "aotp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1.3"
const-str = "0.5.3"
gloo-console = "0.2.3"
gloo-utils = "0.1.6"
rapyd = { path = "../../rapyd" }
util-macros = { path = "../../util-macros" }
syn = { version = "1.0.102" }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Text"] }
rapyd-macros = { version = "0.1.0", path = "../../rapyd-macros" }
